<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuario_Fragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/editTextUsuarioRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/editNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMailRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/editMail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsuarioRegistro"
        app:layout_constraintStart_toStartOf="@+id/editTextUsuarioRegistro"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioRegistro" />

    <Button
        android:id="@+id/buttonIniciarSesionRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/butInic"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegistrarUsuario"
        app:layout_constraintStart_toStartOf="@+id/buttonRegistrarUsuario"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrarUsuario" />

    <Button
        android:id="@+id/buttonRegistrarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/butReg"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegistro"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegistro"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegistro" />

    <EditText
        android:id="@+id/editTextPasswordRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/editContra"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextMailRegistro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextMailRegistro"
        app:layout_constraintTop_toBottomOf="@+id/editTextMailRegistro" />

    <TextView
        android:id="@+id/textViewRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:text="@string/regTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>